fix alignment on animation

--- a/index.css
+++ b/index.css
@@ -25,8 +25,8 @@ body {
   border-radius: 50%;
   width: 50%;
   background-color: #eee;
-  height: 12px;
-  width: 12px;
+  height: 11px;
+  width: 11px;
   margin-right: 0.5rem;
 }
 
